[package]
name = "secret_stream"
version = "0.1.0"
authors = ["AljoschaMeyer <mail@aljoscha-meyer.de>"]
description = "Convenient combination of secret-handshake and box-stream."
repository = "https://github.com/AljoschaMeyer/secret-stream-rs"
readme = "README.md"
license = "GPL-3.0"

[dependencies]
futures = "0.1.17"
tokio-io = "0.1.5"
sodiumoxide = "0.0.15"
secret_handshake = "3.0.0"
box_stream = "0.3.0"